# reverse-recording

./: README.md  pyproject.toml  requirements.txt
爬虫/: AI优化后的爬取视频文件案例.py  Python实现AES算法的五种模式.py  aiohttp异步请求.py  bs4解析库.py  install_databases.sh  post过验证码案例.py  redis_test.py  requests_1.py  requests_httpx_aiohttp性能对比.py  re正则模块使用.py  test1.py  test2.py  urllib使用.py  引入消息队列多线程来处理视频流下载.py  性能优化后代码.py  消息摘要算法.py  视频流采集.py  视频类爬虫案例.py
爬虫/PythonScrapyTest/: run.py  scrapy.cfg
爬虫/PythonScrapyTest/PythonScrapyTest/: items.py  middlewares.py  pipelines.py  settings.py
爬虫/PythonScrapyTest/PythonScrapyTest/spiders/: xiuer.py
