[project]
name = "ReverseRecording"
version = "0.1.0"
description = "学习"
authors = [
    {name = "caibo", email = "v121474129@163.com"},
]
dependencies = [
    "requests>=2.32.3",
    "httpx>=0.28.1",
    "aiohttp>=3.11.14",
    "beautifulsoup4>=4.13.3",
    "lxml>=5.3.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
